Update AzurePipelines-CI.yaml for Azure Pipelines

--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -16,7 +16,7 @@ steps:
     Contents: '**/*.jar'
     TargetFolder: '$(build.artifactstagingdirectory)'
   condition: succeededOrFailed()
-
+#test
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact: drop'
   inputs:
