Update AzurePipelines-CI.yaml for Azure Pipelines

--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -37,3 +37,9 @@ steps:
   inputs:
     codeCoverageTool: Cobertura
     summaryFileLocation: '$(Build.artifactstagingdirectory)/TestResults/Cobertura.xml'
+- task: NuGetCommand@2
+  inputs:
+        command: 'restore'
+        restoreSolution: '**/*.sln'
+        feedsToUse: 'select'
+        vstsFeed: 'c85b148b-1c99-4ca5-8085-0e9905c7ad25'
