--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -22,6 +22,14 @@ steps:
   inputs:
     PathtoPublish: '$(build.artifactstagingdirectory)'
   condition: succeededOrFailed()
+#Run tests
+- task: DotNetCoreCLI@2
+  displayName: 'Run test.'
+  inputs:
+    command: test
+    arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
+    projects: '**/*Test/*.csproj'
+    PublishTestResults: true
 
 #Coverage report generator
 - task: reportgenerator@4
