--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -30,6 +30,10 @@ steps:
     arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
     projects: '**/*Test/*.csproj'
     PublishTestResults: true
+- task: Cache@2
+  inputs:
+    key: '$(build.artifactstagingdirectory)'
+    path: '$(build.artifactstagingdirectory)'
 
 #Coverage report generator
 - task: reportgenerator@4
