--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -31,6 +31,11 @@ steps:
     projects: '**/*Test/*.csproj'
     PublishTestResults: true
 
+- task: reportgenerator@4
+  inputs:
+    reports: 'coverage.xml'
+    targetdir: 'coveragereport'
+
 #Coverage report generator
 - task: reportgenerator@4
   displayName: Generate Code Coverage Report
