--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -22,26 +22,28 @@ steps:
   inputs:
     PathtoPublish: '$(build.artifactstagingdirectory)'
   condition: succeededOrFailed()
-#Run tests
 - task: DotNetCoreCLI@2
-  displayName: 'Run test.'
+  displayName: dotnet test
   inputs:
     command: test
     arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
-    projects: '**/*Test/*.csproj'
-    PublishTestResults: true
+    projects: 'tests/\*\*/\*.csproj'
+    nobuild: true
 
-#Coverage report generator
-- task: reportgenerator@4
-  displayName: Generate Code Coverage Report
+- task: Palmmedia.reportgenerator.reportgenerator-build-release-task.reportgenerator@4
+  displayName: ReportGenerator
   inputs:
-    reports: $(Build.SourcesDirectory)/Tests/**/coverage.cobertura.xml
-    targetdir: $(build.artifactstagingdirectory)/TestResults/
-    reporttypes: 'HtmlInline_AzurePipelines;Cobertura;Badges'
+    reports: '$(Build.SourcesDirectory)/tests/\*\*/coverage.cobertura.xml'
+    targetdir: '$(Build.SourcesDirectory)/CodeCoverage'
+    reporttypes: 'HtmlInline\_AzurePipelines;Cobertura;Badges'
+    assemblyfilters: '-xunit\*'
 
-#Publish test results
+# Publish the code coverage result (summary and web site)
+# The summary allows to view the coverage percentage in the summary tab
+# The web site allows to view which lines are covered directly in Azure Pipeline
 - task: PublishCodeCoverageResults@1
-  displayName: 'Publish code coverage report'
+  displayName: 'Publish code coverage'
   inputs:
     codeCoverageTool: Cobertura
-    summaryFileLocation: '$(Build.artifactstagingdirectory)/TestResults/Cobertura.xml'
+    summaryFileLocation: '$(Build.SourcesDirectory)/CodeCoverage/Cobertura.xml'
+    reportDirectory: '$(Build.SourcesDirectory)/CodeCoverage'
