--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -24,6 +24,11 @@ steps:
     PathtoPublish: '$(build.artifactstagingdirectory)'
   condition: succeededOrFailed()
 
+#install .net core 3.1.x
+- task: UseDotNet@2
+inputs:
+  Version: '3.1.x'
+  PackageType: sdk
 
 #Run tests
 - task: DotNetCoreCLI@2
