--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -29,7 +29,15 @@ steps:
   inputs:
     Version: '3.1.x'
     PackageType: sdk
-    
+
+#Run tests
+- task: DotNetCoreCLI@2
+  displayName: 'Run test.'
+  inputs:
+    command: test
+    arguments: '--configuration $(BuildConfiguration) /p:CollectCoverage=true /p:CoverletOutputFormat=cobertura'
+    publishTestResults: true
+
 #Coverage report generator
 - task: reportgenerator@4
   displayName: Generate Code Coverage Report
