--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -43,7 +43,7 @@ steps:
 - task: reportgenerator@4
   displayName: Generate Code Coverage Report
   inputs:
-    reports: $(Build.SourcesDirectory)/TestResults/coverage/coverage.cobertura.xml
+    reports: $(Build.SourcesDirectory)/**/coverage.cobertura.xml
     targetdir: $(build.artifactstagingdirectory)/TestResults/
     reporttypes: 'HtmlInline_AzurePipelines;Cobertura;Badges'
 
