Update AzurePipelines-CI.yaml for Azure Pipelines

--- a/AzurePipelines-CI.yaml
+++ b/AzurePipelines-CI.yaml
@@ -9,11 +9,6 @@ steps:
   inputs:
     mavenPomFile: 'app/pom.xml'
     codeCoverageToolOption: Cobertura
-- task: NuGetToolInstaller@1
-
-- task: NuGetCommand@2
-  inputs:
-    restoreSolution: '$(solution)'
 
 - task: CopyFiles@2
   displayName: 'Copy Files to: $(build.artifactstagingdirectory)'
@@ -52,6 +47,7 @@ steps:
     reports: $(Build.SourcesDirectory)/**/coverage.cobertura.xml
     targetdir: $(build.artifactstagingdirectory)/TestResults/
     reporttypes: 'HtmlInline_AzurePipelines;Cobertura;Badges'
+    assemblyfilters: '-xunit*'
 
 #Publish test results
 - task: PublishCodeCoverageResults@1
